kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prytaneum-dev
  name: prytaneum-dev
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prytaneum-dev
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prytaneum-dev
    spec:
      # serviceAccountName: prytaneum-kubernetes
      containers:
        - name: prytaneum-dev-sha256-1
          image: gcr.io/prytaneum-project/github.com/kadey001/prytaneum
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  finalizers:
    - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: prytaneum-dev
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
        'f:spec':
          'f:externalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":80,"protocol":"TCP"}':
              .: {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
          'f:sessionAffinity': {}
          'f:type': {}
      manager: GoogleCloudConsole
      operation: Update
      time: '2021-09-01T23:33:06Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:finalizers':
            .: {}
            'v:"service.kubernetes.io/load-balancer-cleanup"': {}
        'f:status':
          'f:loadBalancer':
            'f:ingress': {}
      manager: kube-controller-manager
      operation: Update
      time: '2021-09-01T23:33:55Z'
  name: prytaneum-dev-service
  namespace: dev
spec:
  clusterIP: 10.112.13.141
  clusterIPs:
    - 10.112.13.141
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30492
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: prytaneum-dev
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prytaneum-ingress
spec:
  rules:
  - host: prytaneum.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prytaneum-dev-service
            port:
              number: 80
